# Drf-learn

./: .gitignore  .pdm-python  README.md  db.sqlite3  pyproject.toml  requirements.txt
api/: models.py  serializers.py  urls.py  views.py  views2.py
api/migrations/: 0001_initial.py
card/: admin.py  models.py
card/migrations/: 0001_initial.py
core/: settings.py  urls.py
home/: urls.py  views copy.py  views.py
home/templates/: home.html
templates/: base.html
